# pegtool

./: .travis.yml  CMakeLists.txt  Peg.cpp  Peg.h  PegTest.cpp  README.md  pegtool.cpp  pegtool.h  pegtool_test.cpp
docs/: Grammar.md  GrammarReference.md
tests/: CMakeLists.txt  README.md
tests/and_predicate/: expected_output.txt  grammar.peg
tests/character_class/: expected_output.txt
tests/character_class_2/: expected_output.txt  input.txt
tests/character_class_2_fail/: grammar.peg
tests/character_class_3/: expected_output.txt
tests/character_class_3_fail/: grammar.peg
tests/character_class_4/: expected_output.txt
tests/character_class_empty_diag/: expected_err.txt  grammar.peg
tests/character_class_fail/: grammar.peg
tests/character_class_invalid_utf_sequence_diag/: expected_err.txt  grammar.peg
tests/character_class_invalid_utf_sequence_diag_2/: expected_err.txt  grammar.peg
tests/character_class_missing_right_bracket_diag/: expected_diagnostics.txt  grammar.peg
tests/character_class_out_of_order_diag/: expected_err.txt  grammar.peg
tests/character_class_trailing_dash/: expected_output.txt  grammar.peg
tests/character_class_trailing_dash_2/: expected_output.txt
tests/dot_expr_3/: expected_output.txt
tests/dot_expr_4/: grammar.peg
tests/duplicate_definition/: expected_err.txt  grammar.peg
tests/group_expr/: expected_output.txt
tests/group_expr_2/: expected_output.txt
tests/group_expr_empty_diag/: expected_diagnostics.txt  grammar.peg
tests/group_expr_empty_diag_2/: expected_diagnostics.txt  grammar.peg
tests/group_expr_fail_2/: grammar.peg
tests/group_expr_missing_inner_expr_diag/: expected_diagnostics.txt  grammar.peg
tests/group_expr_missing_right_paren_diag/: expected_diagnostics.txt  grammar.peg
tests/invalid_def_name/: expected_diagnostics.txt
tests/invalid_escape_sequence_diag/: expected_err.txt  grammar.peg
tests/literal_expr/: expected_accept_output.txt  expected_bytecode.txt  grammar.peg
tests/literal_expr_2/: grammar.peg
tests/literal_expr_3/: expected_output.txt  grammar.peg
tests/literal_expr_4/: expected_output.txt  grammar.peg
tests/literal_expr_backslash/: expected_output.txt  grammar.peg
tests/literal_expr_cr/: expected_output.txt  grammar.peg
tests/literal_expr_hex/: expected_output.txt  grammar.peg
tests/literal_expr_hex_single_digit/: expected_output.txt  grammar.peg
tests/literal_expr_hex_uppercase/: expected_output.txt
tests/literal_expr_hex_uppercase_fail/: grammar.peg
tests/literal_expr_inner_dquote/: expected_output.txt  grammar.peg
tests/literal_expr_inner_squote/: expected_output.txt  grammar.peg
tests/literal_expr_lf/: expected_output.txt
tests/literal_expr_missing_right_dquote/: expected_diagnostics.txt  grammar.peg
tests/literal_expr_missing_right_squote/: expected_diagnostics.txt  grammar.peg
tests/literal_expr_octal/: expected_output.txt  grammar.peg
tests/literal_expr_octal_3/: expected_output.txt  grammar.peg
tests/literal_expr_octal_4/: expected_output.txt  grammar.peg
tests/literal_expr_tab/: expected_output.txt  grammar.peg
tests/literal_expr_unicode/: expected_output.txt
tests/literal_expr_unicode_2/: expected_output.txt  grammar.peg
tests/literal_expr_unicode_3/: expected_output.txt
tests/literal_expr_unicode_3_fail/: grammar.peg
tests/literal_expr_unicode_4/: expected_output.txt
tests/literal_expr_unicode_4_fail/: grammar.peg
tests/literal_expr_unicode_diag/: expected_diagnostics.txt  grammar.peg
tests/literal_expr_unicode_diag_2/: expected_err.txt  grammar.peg
tests/literal_expr_unicode_diag_3/: expected_diagnostics.txt  grammar.peg
tests/literal_expr_unicode_fail/: grammar.peg
tests/missing_expr_after_right_arrow/: expected_diagnostics.txt  grammar.peg
tests/missing_right_arrow/: expected_err.txt  grammar.peg
tests/not_predicate/: expected_output.txt
tests/not_predicate_fail/: grammar.peg
tests/plus_expr/: expected_output.txt
tests/plus_expr_2/: expected_output.txt  input.txt
tests/plus_expr_fail/: grammar.peg
tests/question_expr/: expected_output.txt
tests/question_expr_2/: expected_output.txt
tests/question_expr_3/: expected_output.txt
tests/question_expr_fail/: grammar.peg
tests/reference_expr/: expected_output.txt  grammar.peg
tests/reference_expr_unresolved/: expected_diagnostics.txt  grammar.peg
tests/sequence_expr/: expected_output.txt  grammar.peg
tests/star_expr/: expected_output.txt
tests/star_expr_3/: expected_output.txt  grammar.peg
tests/test_driver/: main.cpp  run_test.cpp  run_test.h
tests/unused_definition/: expected_err.txt  grammar.peg
tests/unused_definition_2/: expected_err.txt  grammar.peg
